pocketpy.odin


	/// Python equivalent to `getattr(self, name)`.
	py_getattr :: proc() -> i32 ---

	/// Python equivalent to `setattr(self, name, val)`.
	py_setattr :: proc() -> i32 ---

	/// Python equivalent to `delattr(self, name)`.
	py_delattr :: proc() -> i32 ---

	/// Python equivalent to `self[key]`.
	py_getitem :: proc() -> i32 ---

	/// Python equivalent to `self[key] = val`.
	py_setitem :: proc() -> i32 ---

	/// Python equivalent to `del self[key]`.
	py_delitem :: proc() -> i32 ---

	/// Get a module by path.
	py_getmodule :: proc(path: cstring) -> py_GlobalRef ---

	/// Create a new module.
	py_newmodule :: proc(path: cstring) -> py_GlobalRef ---

	/// Reload an existing module.
	py_importlib_reload :: proc() -> i32 ---

	/// Import a module.
	/// The result will be set to `py_retval()`.
	/// -1: error, 0: not found, 1: success
	py_import :: proc(path: cstring) -> i32 ---

	/// Check if there is an unhandled exception.
	py_checkexc :: proc() -> i32 ---

	/// Check if the unhandled exception is an instance of the given type.
	/// If match, the exception will be stored in `py_retval()`.
	py_matchexc :: proc() -> i32 ---

	/// Clear the unhandled exception.
	/// @param p0 the unwinding point. Use `NULL` if not needed.
	py_clearexc :: proc(p0: py_StackRef) ---

	/// Print the unhandled exception.
	py_printexc :: proc() ---

	/// Format the unhandled exception and return a null-terminated string.
	/// The returned string should be freed by the caller.
	py_formatexc :: proc() -> cstring ---

	/// Raise an exception by type and message. Always return false.
	py_exception :: proc(type: py_Type, fmt: cstring, #c_vararg args: ..any) -> i32 ---

	/// Raise an exception object. Always return false.
	py_raise                        :: proc() -> i32 ---
	KeyError                        :: proc() -> i32 ---
	StopIteration                   :: proc() -> i32 ---
	py_debugger_waitforattach       :: proc(hostname: cstring, port: u16) ---
	py_debugger_status              :: proc() -> i32 ---
	py_debugger_exceptionbreakpoint :: proc(exc: py_Ref) ---
	py_debugger_exit                :: proc(code: i32) ---

	/// Create a `tuple` with `n` UNINITIALIZED elements.
	/// You should initialize all elements before using it.
	py_newtuple      :: proc(_: py_OutRef, n: i32) -> py_ObjectRef ---
	py_tuple_data    :: proc(self: py_Ref) -> py_ObjectRef ---
	py_tuple_getitem :: proc(self: py_Ref, i: i32) -> py_ObjectRef ---
	py_tuple_setitem :: proc(self: py_Ref, i: i32, val: py_Ref) ---
	py_tuple_len     :: proc(self: py_Ref) -> i32 ---

	/// Create an empty `list`.
	py_newlist :: proc(py_OutRef) ---

	/// Create a `list` with `n` UNINITIALIZED elements.
	/// You should initialize all elements before using it.
	py_newlistn     :: proc(_: py_OutRef, n: i32) ---
	py_list_data    :: proc(self: py_Ref) -> py_ItemRef ---
	py_list_getitem :: proc(self: py_Ref, i: i32) -> py_ItemRef ---
	py_list_setitem :: proc(self: py_Ref, i: i32, val: py_Ref) ---
	py_list_delitem :: proc(self: py_Ref, i: i32) ---
	py_list_len     :: proc(self: py_Ref) -> i32 ---
	py_list_swap    :: proc(self: py_Ref, i: i32, j: i32) ---
	py_list_append  :: proc(self: py_Ref, val: py_Ref) ---
	py_list_emplace :: proc(self: py_Ref) -> py_ItemRef ---
	py_list_clear   :: proc(self: py_Ref) ---
	py_list_insert  :: proc(self: py_Ref, i: i32, val: py_Ref) ---

	/// Create an empty `dict`.
	py_newdict :: proc(py_OutRef) ---

	/// -1: error, 0: not found, 1: found
	py_dict_getitem :: proc(self: py_Ref, key: py_Ref) -> i32 ---

	/// true: success, false: error
	py_dict_setitem :: proc() -> i32 ---

	/// -1: error, 0: not found, 1: found (and deleted)
	py_dict_delitem :: proc(self: py_Ref, key: py_Ref) -> i32 ---

	/// -1: error, 0: not found, 1: found
	py_dict_getitem_by_str :: proc(self: py_Ref, key: cstring) -> i32 ---

	/// -1: error, 0: not found, 1: found
	py_dict_getitem_by_int :: proc(self: py_Ref, key: py_i64) -> i32 ---

	/// true: success, false: error
	py_dict_setitem_by_str :: proc() -> i32 ---

	/// true: success, false: error
	py_dict_setitem_by_int :: proc() -> i32 ---

	/// -1: error, 0: not found, 1: found (and deleted)
	py_dict_delitem_by_str :: proc(self: py_Ref, key: cstring) -> i32 ---

	/// -1: error, 0: not found, 1: found (and deleted)
	py_dict_delitem_by_int :: proc(self: py_Ref, key: py_i64) -> i32 ---

	/// true: success, false: error
	py_dict_apply :: proc() -> i32 ---

	/// noexcept
	py_dict_len :: proc(self: py_Ref) -> i32 ---

	/// Create an UNINITIALIZED `slice` object.
	/// You should use `py_setslot()` to set `start`, `stop`, and `step`.
	py_newslice :: proc(py_OutRef) -> py_ObjectRef ---

	/// Create a `slice` object from 3 integers.
	py_newsliceint :: proc(out: py_OutRef, start: py_i64, stop: py_i64, step: py_i64) ---

	/************* random module *************/
	py_newRandom      :: proc(out: py_OutRef) ---
	py_Random_seed    :: proc(self: py_Ref, seed: py_i64) ---
	py_Random_random  :: proc(self: py_Ref) -> py_f64 ---
	py_Random_uniform :: proc(self: py_Ref, a: py_f64, b: py_f64) -> py_f64 ---
	py_Random_randint :: proc(self: py_Ref, a: py_i64, b: py_i64) -> py_i64 ---

	/************* array2d module *************/
	py_newarray2d        :: proc(out: py_OutRef, width: i32, height: i32) ---
	py_array2d_getwidth  :: proc(self: py_Ref) -> i32 ---
	py_array2d_getheight :: proc(self: py_Ref) -> i32 ---
	py_array2d_getitem   :: proc(self: py_Ref, x: i32, y: i32) -> py_ObjectRef ---
	py_array2d_setitem   :: proc(self: py_Ref, x: i32, y: i32, val: py_Ref) ---

	/************* vmath module *************/
	py_newvec2    :: proc(out: py_OutRef, _: c11_vec2) ---
	py_newvec3    :: proc(out: py_OutRef, _: c11_vec3) ---
	py_newvec2i   :: proc(out: py_OutRef, _: c11_vec2i) ---
	py_newvec3i   :: proc(out: py_OutRef, _: c11_vec3i) ---
	py_newcolor32 :: proc(out: py_OutRef, _: c11_color32) ---
	py_newmat3x3  :: proc(out: py_OutRef) -> ^c11_mat3x3 ---
	py_tovec2     :: proc(self: py_Ref) -> c11_vec2 ---
	py_tovec3     :: proc(self: py_Ref) -> c11_vec3 ---
	py_tovec2i    :: proc(self: py_Ref) -> c11_vec2i ---
	py_tovec3i    :: proc(self: py_Ref) -> c11_vec3i ---
	py_tomat3x3   :: proc(self: py_Ref) -> ^c11_mat3x3 ---
	py_tocolor32  :: proc(self: py_Ref) -> c11_color32 ---

	/************* json module *************/
	/// Python equivalent to `json.dumps(val)`.
	py_json_dumps :: proc() -> i32 ---

	/// Python equivalent to `json.loads(val)`.
	py_json_loads :: proc() -> i32 ---

	/************* pickle module *************/
	/// Python equivalent to `pickle.dumps(val)`.
	py_pickle_dumps :: proc() -> i32 ---

	/// Python equivalent to `pickle.loads(val)`.
	py_pickle_loads :: proc() -> i32 ---

	/************* pkpy module *************/
	/// Begin the watchdog with `timeout` in milliseconds.
	/// `PK_ENABLE_WATCHDOG` must be defined to `1` to use this feature.
	/// You need to call `py_watchdog_end()` later.
	/// If `timeout` is reached, `TimeoutError` will be raised.
	py_watchdog_begin :: proc(timeout: py_i64) ---

	/// Reset the watchdog.
	py_watchdog_end    :: proc() ---
	py_profiler_begin  :: proc() ---
	py_profiler_end    :: proc() ---
	py_profiler_reset  :: proc() ---
	py_profiler_report :: proc() -> cstring ---

	/************* Others *************/
	time_ns           :: proc() -> i64 ---
	time_monotonic_ns :: proc() -> i64 ---

	/// An utility function to read a line from stdin for REPL.
	py_replinput :: proc(buf: cstring, max_size: i32) -> i32 ---
}

/// Python favored string formatting.
/// %d: int
/// %i: py_i64 (int64_t)
/// %f: py_f64 (double)
/// %s: const char*
/// %q: c11_sv
/// %v: c11_sv
/// %c: char
/// %p: void*
/// %t: py_Type
/// %n: py_Name
py_PredefinedType :: enum u32 {
	nil                   = 0,
	object                = 1,
	type                  = 2,  // py_Type
	int                   = 3,
	float                 = 4,
	bool                  = 5,
	str                   = 6,
	str_iterator          = 7,
	list                  = 8,  // c11_vector
	tuple                 = 9,  // N slots
	list_iterator         = 10, // 1 slot
	tuple_iterator        = 11, // 1 slot
	slice                 = 12, // 3 slots (start, stop, step)
	range                 = 13,
	range_iterator        = 14,
	module                = 15,
	function              = 16,
	nativefunc            = 17,
	boundmethod           = 18, // 2 slots (self, func)
	super                 = 19, // 1 slot + py_Type
	BaseException         = 20,
	Exception             = 21,
	bytes                 = 22,
	namedict              = 23,
	locals                = 24,
	code                  = 25,
	dict                  = 26,
	dict_iterator         = 27, // 1 slot
	property              = 28, // 2 slots (getter + setter)
	star_wrapper          = 29, // 1 slot + int level
	staticmethod          = 30, // 1 slot
	classmethod           = 31, // 1 slot
	NoneType              = 32,
	NotImplementedType    = 33,
	ellipsis              = 34,
	generator             = 35,

	/* builtin exceptions */
	SystemExit            = 36,
	KeyboardInterrupt     = 37,
	StopIteration         = 38,
	SyntaxError           = 39,
	RecursionError        = 40,
	OSError               = 41,
	NotImplementedError   = 42,
	TypeError             = 43,
	IndexError            = 44,
	ValueError            = 45,
	RuntimeError          = 46,
	TimeoutError          = 47,
	ZeroDivisionError     = 48,
	NameError             = 49,
	UnboundLocalError     = 50,
	AttributeError        = 51,
	ImportError           = 52,
	AssertionError        = 53,
	KeyError              = 54,

	/* stdc */
	stdc_Memory           = 55,
	stdc_Char             = 56,
	stdc_UChar            = 57,
	stdc_Short            = 58,
	stdc_UShort           = 59,
	stdc_Int              = 60,
	stdc_UInt             = 61,
	stdc_Long             = 62,
	stdc_ULong            = 63,
	stdc_LongLong         = 64,
	stdc_ULongLong        = 65,
	stdc_Float            = 66,
	stdc_Double           = 67,
	stdc_Pointer          = 68,
	stdc_Bool             = 69,

	/* vmath */
	vec2                  = 70,
	vec3                  = 71,
	vec2i                 = 72,
	vec3i                 = 73,
	mat3x3                = 74,
	color32               = 75,

	/* array2d */
	array2d_like          = 76,
	array2d_like_iterator = 77,
	array2d               = 78,
	array2d_view          = 79,
	chunked_array2d       = 80,
}

